// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reservation card render with props should match with snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="col-12"
      >
        Reservation
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-5"
      >
        08:00
      </div>
      <div
        class="col-2"
      >
        -
      </div>
      <div
        class="col-5"
      >
        09:00
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Reservation card should match with snapshot 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <div
      class="row"
    >
      <div
        class="col-12"
      >
        Reservation
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-5"
      />
      <div
        class="col-2"
      >
        -
      </div>
      <div
        class="col-5"
      />
    </div>
  </div>
</DocumentFragment>
`;
